--- a/app.json
+++ b/app.json
@@ -5,11 +5,11 @@
   "env": {
     "METHOD": {
        "description": "Encryption method, null by default(table), the following methods are supported: aes-128-cfb, aes-192-cfb, aes-256-cfb, bf-cfb, cast5-cfb, des-cfb, rc4-md5, rc4-md5-6, chacha20, salsa20, rc4, table.",
-       "value": "chacha20"
+       "value": "chacha20-ietf-poly1305"
      },
      "PASSWORD": {
        "description": "A password used to encrypt transfer.",
-       "value": "ss123456"
+       "value": "yzqyzq1234"
      }
   },
   "stack": "container",
